--- a/events.html
+++ b/events.html
@@ -3,51 +3,41 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>الفعاليات – مجلس طلاب خطوة</title>
-  <meta name="description" content="الفعاليات القادمة لمجلس طلاب خطوة في جامعة لا تروب – ملبورن. سجّل الآن.">
+  <title>فعاليات المجلس – Khotwa</title>
   <style>
     :root{--primary:#1e40af;--primary-600:#1d4ed8;--ring:#e5e7eb;--card:#f8fafc;--text:#0f172a;--muted:#6b7280}
     *{box-sizing:border-box}
     body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;color:var(--text);background:#fff}
     a{color:inherit;text-decoration:none}
+    a:visited{color:inherit}
+    a:hover{text-decoration:none}
+
     .container{width:min(1120px,92%);margin-inline:auto}
-    /* Navbar */
     .navbar{position:sticky;top:0;background:#fff;border-bottom:1px solid var(--ring);z-index:40}
     .nav-inner{display:flex;justify-content:space-between;align-items:center;padding:.8rem 0}
     .brand{display:flex;align-items:center;gap:.8rem;font-weight:700}
-    .brand .logo{width:28px;height:28px;object-fit:cover;border-radius:6px}
+    .brand .logo{width:40px;height:40px;object-fit:cover;border-radius:8px}
     .nav-links{display:flex;gap:1rem}
     .nav-links a{padding:.5rem .75rem;border-radius:10px}
-    .nav-links a[aria-current="page"]{background:var(--card);font-weight:700}
     .nav-links a:hover{background:var(--card)}
-    /* Sections & cards */
+
     section{padding:2rem 0}
     .muted{color:var(--muted)}
     .grid{display:grid;gap:1rem}
     .grid-3{grid-template-columns:repeat(3,1fr)}
     @media(max-width:980px){.grid-3{grid-template-columns:1fr}}
-    .card{background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem}
+    .card{background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem;display:grid;gap:.6rem}
     .chip{display:inline-block;font-size:.78rem;padding:.25rem .55rem;border-radius:999px;background:var(--card);border:1px solid var(--ring)}
-    .btn{display:inline-block;padding:.65rem 1rem;border-radius:10px;background:var(--primary);color:#fff}
+    .btn{display:inline-block;padding:.6rem .9rem;border-radius:10px;background:var(--primary);color:#fff}
     .btn:hover{background:var(--primary-600)}
-    /* Forms */
-    .form-card{background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem}
-    .form-row{display:grid;grid-template-columns:1fr 1fr;gap:.8rem}
-    @media(max-width:720px){.form-row{grid-template-columns:1fr}}
-    label{display:block;font-weight:600;margin:.2rem 0}
-    input,textarea,select{width:100%;padding:.65rem .7rem;border:1px solid var(--ring);border-radius:10px}
-    textarea{min-height:110px;resize:vertical}
-    .submit{margin-top:.6rem}
-    /* Footer */
     footer{border-top:1px solid var(--ring);padding:1rem 0;margin-top:1rem}
   </style>
 </head>
 <body>
-  <!-- Navbar -->
-  <nav class="navbar">
+  <nav class="navbar" aria-label="الشريط العلوي">
     <div class="container nav-inner">
-      <a class="brand" href="/index.html" aria-label="العودة للرئيسية">
-        <img class="logo" src="https://g.top4top.io/p_3516rfttb1.jpg" alt="شعار مجلس طلاب خطوة" width="28" height="28">
+      <a class="brand" href="/index.html">
+        <img src="https://g.top4top.io/p_3516rfttb1.jpg" alt="شعار مجلس طلاب خطوة" class="logo" width="60" height="60">
         <span>مجلس طلاب خطوة – La Trobe</span>
       </a>
       <div class="nav-links" role="menubar">
@@ -60,139 +50,35 @@
     </div>
   </nav>
 
-  <!-- Events list -->
   <main class="container">
-    <section aria-labelledby="upcoming">
-      <h1 id="upcoming" style="margin:0 0 .4rem">الفعاليات القادمة</h1>
+    <section>
+      <h1 style="margin:0 0 .4rem">الفعاليات القادمة</h1>
       <p class="muted">تابع كل جديد هنا.</p>
 
       <div class="grid grid-3">
-        <!-- ورشة -->
+        <!-- Workshop -->
         <article class="card">
           <span class="chip">10 سبتمبر – 5:00م</span>
           <h3>ورشة تخصصات خطوة</h3>
           <p class="muted">IT، الأمن السيبراني، العلوم الحيوية، وإدارة الأعمال – Bundoora.</p>
-          <a class="btn" href="#reg-workshop">سجّل الآن</a>
+          <a class="btn" href="/contact.html?event=workshop" rel="noopener">سجّل الآن</a>
         </article>
 
-        <!-- بادل -->
+        <!-- Padel -->
         <article class="card">
           <span class="chip">24 سبتمبر – 4:00م</span>
           <h3>بطولة البادل</h3>
           <p class="muted">تنظيم رياضي طلابي – La Trobe Sports Centre.</p>
-          <a class="btn" href="#reg-padel">التفاصيل / التسجيل</a>
+          <a class="btn" href="/contact.html?event=padel" rel="noopener">التفاصيل</a>
         </article>
 
-        <!-- ماراثون -->
+        <!-- Marathon -->
         <article class="card">
           <span class="chip">1 أكتوبر – 9:00ص</span>
           <h3>ماراثون داخل الحرم</h3>
           <p class="muted">مسارات 1K و2.5K و10K مع نقاط مياه وخدمات دعم.</p>
-          <a class="btn" href="#reg-marathon">سجّل الآن</a>
+          <a class="btn" href="/contact.html?event=marathon" rel="noopener">سجّل الآن</a>
         </article>
-      </div>
-    </section>
-
-    <!-- Forms (كل فعالية لها نموذج صغير خاص فيها) -->
-    <section id="register" aria-labelledby="register-h">
-      <h2 id="register-h" style="margin:1.2rem 0 .6rem">نموذج التسجيل</h2>
-      <p class="muted" style="margin-top:-.4rem">املأ نموذج الفعالية المناسبة وسيصلك تأكيد على بريدك.</p>
-
-      <!-- ورشة -->
-      <div id="reg-workshop" class="form-card" style="margin:.8rem 0">
-        <h3 style="margin:.2rem 0 .8rem">تسجيل: ورشة تخصصات خطوة</h3>
-        <form action="https://formspree.io/f/mblkegbr" method="POST">
-          <input type="hidden" name="event" value="ورشة تخصصات خطوة">
-          <div class="form-row">
-            <div>
-              <label for="w-name">الاسم الكامل</label>
-              <input id="w-name" name="name" autocomplete="name" required>
-            </div>
-            <div>
-              <label for="w-email">البريد الإلكتروني</label>
-              <input id="w-email" type="email" name="email" autocomplete="email" required>
-            </div>
-          </div>
-          <div class="form-row">
-            <div>
-              <label for="w-phone">رقم الجوال (اختياري)</label>
-              <input id="w-phone" name="phone" inputmode="tel" autocomplete="tel">
-            </div>
-            <div>
-              <label for="w-notes">ملاحظات</label>
-              <input id="w-notes" name="notes" placeholder="سؤال أو تفضيلات…">
-            </div>
-          </div>
-          <button class="btn submit" type="submit">إرسال التسجيل</button>
-        </form>
-      </div>
-
-      <!-- بادل -->
-      <div id="reg-padel" class="form-card" style="margin:.8rem 0">
-        <h3 style="margin:.2rem 0 .8rem">تسجيل: بطولة البادل</h3>
-        <form action="https://formspree.io/f/mblkegbr" method="POST">
-          <input type="hidden" name="event" value="بطولة البادل">
-          <div class="form-row">
-            <div>
-              <label for="p-name">الاسم الكامل</label>
-              <input id="p-name" name="name" required>
-            </div>
-            <div>
-              <label for="p-email">البريد الإلكتروني</label>
-              <input id="p-email" type="email" name="email" required>
-            </div>
-          </div>
-          <div class="form-row">
-            <div>
-              <label for="p-level">المستوى</label>
-              <select id="p-level" name="level" required>
-                <option value="" selected disabled>اختر مستوى</option>
-                <option>مبتدئ</option>
-                <option>متوسط</option>
-                <option>متقدم</option>
-              </select>
-            </div>
-            <div>
-              <label for="p-phone">رقم الجوال (اختياري)</label>
-              <input id="p-phone" name="phone" inputmode="tel">
-            </div>
-          </div>
-          <button class="btn submit" type="submit">إرسال التسجيل</button>
-        </form>
-      </div>
-
-      <!-- ماراثون -->
-      <div id="reg-marathon" class="form-card" style="margin:.8rem 0">
-        <h3 style="margin:.2rem 0 .8rem">تسجيل: ماراثون داخل الحرم</h3>
-        <form action="https://formspree.io/f/mblkegbr" method="POST">
-          <input type="hidden" name="event" value="ماراثون داخل الحرم">
-          <div class="form-row">
-            <div>
-              <label for="m-name">الاسم الكامل</label>
-              <input id="m-name" name="name" required>
-            </div>
-            <div>
-              <label for="m-email">البريد الإلكتروني</label>
-              <input id="m-email" type="email" name="email" required>
-            </div>
-          </div>
-          <div class="form-row">
-            <div>
-              <label for="m-distance">المسافة</label>
-              <select id="m-distance" name="distance" required>
-                <option value="" selected disabled>اختر مسافة</option>
-                <option>1K</option>
-                <option>2.5K</option>
-                <option>10K</option>
-              </select>
-            </div>
-            <div>
-              <label for="m-phone">رقم الجوال (اختياري)</label>
-              <input id="m-phone" name="phone" inputmode="tel">
-            </div>
-          </div>
-          <button class="btn submit" type="submit">إرسال التسجيل</button>
-        </form>
       </div>
     </section>
   </main>
@@ -200,13 +86,9 @@
   <footer>
     <div class="container" style="display:flex;justify-content:space-between;gap:1rem;align-items:center">
       <div class="muted">© <span id="year"></span> Khotwa Student Council</div>
-      <a href="https://www.instagram.com/khotwa.sc/" target="_blank" rel="noopener noreferrer">Instagram</a>
+      <a href="https://www.instagram.com/khotwa.sc/" target="_blank" rel="noopener">Instagram</a>
     </div>
   </footer>
-
-  <script>
-    // سنة الفوتر
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+  <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
 </body>
 </html>
