--- a/about.html
+++ b/about.html
@@ -5,33 +5,44 @@
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>من نحن – Khotwa</title>
   <style>
-    :root{--ring:#e5e7eb;--card:#f8fafc;--text:#0f172a}
-    *{box-sizing:border-box}body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;color:var(--text)}
+    :root{--primary:#1e40af;--ring:#e5e7eb;--card:#f8fafc;--text:#0f172a;--muted:#6b7280}
+    *{box-sizing:border-box}
+    body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;color:var(--text);background:#fff}
+    a{color:inherit;text-decoration:none}
+    a:visited{color:inherit}
+    a:hover{text-decoration:none}
+
     .container{width:min(1120px,92%);margin-inline:auto}
-    .navbar{position:sticky;top:0;background:#fff;border-bottom:1px solid var(--ring)}
+    .navbar{position:sticky;top:0;background:#fff;border-bottom:1px solid var(--ring);z-index:40}
     .nav-inner{display:flex;justify-content:space-between;align-items:center;padding:.8rem 0}
     .brand{display:flex;align-items:center;gap:.8rem;font-weight:700}
-    .brand .logo{width:28px;height:28px;object-fit:cover;border-radius:6px}
-    .nav-links{display:flex;gap:1rem}.nav-links a{padding:.5rem .75rem;border-radius:10px}.nav-links a:hover{background:var(--card)}
-    section{padding:2rem 0}.grid{display:grid;gap:1rem}.grid-2{grid-template-columns:repeat(2,1fr)}@media(max-width:980px){.grid-2{grid-template-columns:1fr}}
+    .brand .logo{width:40px;height:40px;object-fit:cover;border-radius:8px}
+    .nav-links{display:flex;gap:1rem}
+    .nav-links a{padding:.5rem .75rem;border-radius:10px}
+    .nav-links a:hover{background:var(--card)}
+
+    section{padding:2rem 0}
+    .muted{color:var(--muted)}
+    .grid{display:grid;gap:1rem}
+    .grid-2{grid-template-columns:repeat(2,1fr)}
+    @media(max-width:980px){.grid-2{grid-template-columns:1fr}}
     .card{background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem}
-    .muted{color:#6b7280}
     footer{border-top:1px solid var(--ring);padding:1rem 0;margin-top:1rem}
   </style>
 </head>
 <body>
-  <nav class="navbar">
+  <nav class="navbar" aria-label="الشريط العلوي">
     <div class="container nav-inner">
       <a class="brand" href="/index.html">
-        <img src="https://g.top4top.io/p_3516rfttb1.jpg" alt="شعار مجلس طلاب خطوة" class="logo" width="28" height="28">
+        <img src="https://g.top4top.io/p_3516rfttb1.jpg" alt="شعار مجلس طلاب خطوة" class="logo" width="60" height="60">
         <span>مجلس طلاب خطوة – La Trobe</span>
       </a>
-      <div class="nav-links">
-        <a href="/about.html">من نحن</a>
-        <a href="/news.html">الأخبار</a>
-        <a href="/events.html">الفعاليات</a>
-        <a href="/calendar.html">التقويم</a>
-        <a href="/contact.html">تواصل</a>
+      <div class="nav-links" role="menubar">
+        <a href="/about.html" role="menuitem" aria-current="page">من نحن</a>
+        <a href="/news.html" role="menuitem">الأخبار</a>
+        <a href="/events.html" role="menuitem">الفعاليات</a>
+        <a href="/calendar.html" role="menuitem">التقويم</a>
+        <a href="/contact.html" role="menuitem">تواصل</a>
       </div>
     </div>
   </nav>
@@ -41,10 +52,10 @@
       <h1>من نحن</h1>
       <p class="muted">مجلس طلاب خطوة يمثل طلاب برنامج خطوة في جامعة لا تروب – ملبورن.</p>
       <div class="grid grid-2">
-        <article class="card"><h3>الرؤية</h3><p>دعم تجربة الطالب وصناعة بيئة جامعية فعّالة وإيجابية.</p></article>
-        <article class="card"><h3>الرسالة</h3><p>تمكين الطلاب أكاديميًا واجتماعيًا وثقافيًا عبر أنشطة وخدمات نوعية.</p></article>
-        <article class="card"><h3>الأهداف</h3><p>التمثيل، تطوير القيادة، التفاعل المجتمعي، والدعوة.</p></article>
-        <article class="card"><h3>التنظيم</h3><p>رئيس ونائب، قادة فرق، منسقو الأنشطة والإعلام والعلاقات.</p></article>
+        <article class="card"><h3>الرؤية</h3><p>مجتمع طلابي داعم ومبادر يسهم في نجاح أفراده أكاديميًا ومهنيًا.</p></article>
+        <article class="card"><h3>الرسالة</h3><p>توفير فرص وأنشطة وخدمات فعّالة تعزز تجربة الطالب وتواصله مع الجامعة.</p></article>
+        <article class="card"><h3>القيم</h3><p>العمل الجماعي، الشفافية، التطوع، الابتكار، والمسؤولية.</p></article>
+        <article class="card"><h3>التنظيم</h3><p>رئيس ونائب رئيس، قادة فرق (الفعاليات، الإعلام، العلاقات)، ومنسقون متخصصون.</p></article>
       </div>
     </section>
   </main>
