--- a/contact.html
+++ b/contact.html
@@ -9,43 +9,53 @@
     *{box-sizing:border-box}
     html,body{height:100%}
     body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;color:var(--text);background:#fff}
-    /* إصلاح مظهر الروابط */
-    a{color:inherit;text-decoration:none}
-    a:visited{color:inherit}
-    a:hover{text-decoration:none}
-
+    a{color:inherit;text-decoration:none} a:visited{color:inherit}
     .container{width:min(1120px,92%);margin-inline:auto}
-    /* Navbar */
+
+    /* Navbar (متجاوب) */
     .navbar{position:sticky;top:0;background:#fff;border-bottom:1px solid var(--ring);z-index:40}
     .nav-inner{display:flex;justify-content:space-between;align-items:center;padding:.8rem 0}
     .brand{display:flex;align-items:center;gap:.8rem;font-weight:700}
-    .brand .logo{width:40px;height:40px;object-fit:cover;border-radius:8px}
-    .nav-links{display:flex;gap:1rem}
+    .logo{width:40px;height:40px;object-fit:cover;border-radius:8px;border:1px solid var(--ring)}
+    .nav-links{display:flex;gap:1rem;align-items:center}
     .nav-links a{padding:.5rem .75rem;border-radius:10px}
     .nav-links a:hover{background:var(--card)}
+    .menu-toggle{display:none;border:1px solid var(--ring);padding:.5rem .7rem;border-radius:10px;background:#fff}
 
+    @media(max-width:860px){
+      .menu-toggle{display:inline-flex}
+      .nav-links{
+        display:none;position:absolute;right:4%;left:4%;top:64px;flex-direction:column;
+        padding:.75rem;background:#fff;border:1px solid var(--ring);border-radius:14px;
+        box-shadow:0 10px 30px rgba(0,0,0,.06)
+      }
+      .nav-links.open{display:flex}
+      .nav-links a{width:100%}
+    }
+
+    /* Page */
     section{padding:2rem 0}
     .muted{color:var(--muted)}
-
     form{display:grid;gap:.7rem;background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem}
     input,textarea{width:100%;padding:.7rem;border:1px solid var(--ring);border-radius:10px;font:inherit}
     button{padding:.7rem 1rem;border-radius:10px;border:1px solid var(--ring);background:var(--primary);color:#fff;cursor:pointer}
-
     .grid{display:grid;gap:1rem;grid-template-columns:1fr 1fr}
     @media(max-width:980px){.grid{grid-template-columns:1fr}}
-
     iframe{width:100%;height:360px;border:1px solid var(--ring);border-radius:16px}
+
+    /* Footer */
     footer{border-top:1px solid var(--ring);padding:1rem 0;margin-top:1rem}
   </style>
 </head>
 <body>
-  <nav class="navbar">
+  <nav class="navbar" aria-label="الشريط العلوي">
     <div class="container nav-inner">
-      <a class="brand" href="/index.html" aria-label="العودة للرئيسية">
-        <img src="https://g.top4top.io/p_3516rfttb1.jpg" alt="شعار مجلس طلاب خطوة" class="logo" width="40" height="40">
+      <a class="brand" href="/index.html">
+        <img src="https://g.top4top.io/p_3516rfttb1.jpg" alt="شعار مجلس طلاب خطوة" class="logo">
         <span>مجلس طلاب خطوة – La Trobe</span>
       </a>
-      <div class="nav-links" role="menubar">
+      <button id="menuBtn" class="menu-toggle" aria-expanded="false" aria-controls="primary-menu">القائمة</button>
+      <div id="primary-menu" class="nav-links" role="menubar">
         <a href="/about.html" role="menuitem">من نحن</a>
         <a href="/news.html" role="menuitem">الأخبار</a>
         <a href="/events.html" role="menuitem">الفعاليات</a>
@@ -65,12 +75,9 @@
           <input type="email" name="email" placeholder="البريد الإلكتروني" required>
           <textarea name="message" rows="6" placeholder="رسالتك" required></textarea>
           <input type="hidden" name="_subject" value="رسالة جديدة من موقع المجلس">
-          <!-- اختياري: إعادة توجيه بعد الإرسال -->
-          <input type="hidden" name="_next" value="https://khotwastudentcouncil.com/contact.html">
           <button type="submit">إرسال</button>
         </form>
       </div>
-
       <div>
         <h2>موقعنا – Bundoora</h2>
         <p class="muted">La Trobe University – Bundoora Campus</p>
@@ -86,6 +93,11 @@
       <a href="https://www.instagram.com/khotwa.sc/" target="_blank" rel="noopener">Instagram</a>
     </div>
   </footer>
-  <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
+
+  <script>
+    document.getElementById('year').textContent=new Date().getFullYear();
+    const btn=document.getElementById('menuBtn'),menu=document.getElementById('primary-menu');
+    btn?.addEventListener('click',()=>{const open=menu.classList.toggle('open');btn.setAttribute('aria-expanded',String(open));});
+  </script>
 </body>
 </html>
