--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
   <meta name="description" content="مجلس طلاب خطوة يمثل طلاب برنامج خطوة في جامعة لا تروب – ملبورن. فعاليات، أخبار، وانضمام للمجلس.">
   <style>
     :root{--primary:#1e40af;--primary-600:#1d4ed8;--ring:#e5e7eb;--card:#f8fafc;--text:#0f172a;--muted:#6b7280}
-    *{box-sizing:border-box} html,body{height:100%}
+    *{box-sizing:border-box}
+    html,body{height:100%}
     body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;color:var(--text);background:#fff}
-    /* إصلاح مظهر الروابط */
+
+    /* الروابط */
     a{color:inherit;text-decoration:none}
     a:visited{color:inherit}
     a:hover{text-decoration:none}
+
+    /* تركيز محسّن للوصولية */
+    :focus-visible{outline:3px solid color-mix(in oklab,var(--primary),#fff 40%);outline-offset:2px;border-radius:8px}
 
     .container{width:min(1120px,92%);margin-inline:auto}
 
@@ -20,7 +25,7 @@
     .navbar{position:sticky;top:0;background:#fff;border-bottom:1px solid var(--ring);z-index:40}
     .nav-inner{display:flex;justify-content:space-between;align-items:center;padding:.8rem 0}
     .brand{display:flex;align-items:center;gap:.8rem;font-weight:700}
-    .brand .logo{width:40px;height:40px;object-fit:cover;border-radius:8px}
+    .brand .logo{width:60px;height:60px;object-fit:cover;border-radius:8px}
     .nav-links{display:flex;gap:1rem}
     .nav-links a{padding:.5rem .75rem;border-radius:10px}
     .nav-links a:hover{background:var(--card)}
@@ -46,7 +51,10 @@
     .grid{display:grid;gap:1rem}
     .grid-3{grid-template-columns:repeat(3,1fr)}
     .grid-2{grid-template-columns:repeat(2,1fr)}
-    @media (max-width:980px){.hero-inner{grid-template-columns:1fr}.grid-3,.grid-2{grid-template-columns:1fr}}
+    @media(max-width:980px){
+      .hero-inner{grid-template-columns:1fr}
+      .grid-3,.grid-2{grid-template-columns:1fr}
+    }
     .card{background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem}
     .chip{display:inline-block;font-size:.78rem;padding:.25rem .55rem;border-radius:999px;background:var(--card);border:1px solid var(--ring)}
 
@@ -63,12 +71,12 @@
         <img src="https://g.top4top.io/p_3516rfttb1.jpg" class="logo" alt="شعار مجلس طلاب خطوة" width="60" height="60">
         <span>مجلس طلاب خطوة – La Trobe</span>
       </a>
-      <div class="nav-links" role="menubar">
-        <a href="/about.html" role="menuitem">من نحن</a>
-        <a href="/news.html" role="menuitem">الأخبار</a>
-        <a href="/events.html" role="menuitem">الفعاليات</a>
-        <a href="/calendar.html" role="menuitem">التقويم</a>
-        <a href="/contact.html" class="nav-cta" role="menuitem">تواصل</a>
+      <div class="nav-links">
+        <a href="/about.html">من نحن</a>
+        <a href="/news.html">الأخبار</a>
+        <a href="/events.html">الفعاليات</a>
+        <a href="/calendar.html">التقويم</a>
+        <a href="/contact.html" class="nav-cta">تواصل</a>
       </div>
     </div>
   </nav>
@@ -128,10 +136,12 @@
   <footer aria-label="تذييل الموقع">
     <div class="container foot">
       <div class="muted">© <span id="year"></span> Khotwa Student Council</div>
-      <a href="https://www.instagram.com/khotwa.sc/" target="_blank" rel="noopener">Instagram</a>
+      <a href="https://www.instagram.com/khotwa.sc/" target="_blank" rel="noopener noreferrer">Instagram</a>
     </div>
   </footer>
 
-  <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
