--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
   <nav class="navbar" aria-label="الشريط العلوي">
     <div class="container nav-inner">
       <a class="brand" href="/index.html">
-        <img src="https://g.top4top.io/p_3516rfttb1.jpg" alt="شعار مجلس طلاب خطوة" class="logo" loading="eager" fetchpriority="high" decoding="async">
+        <img src="https://g.top4top.io/p_3516rfttb1.jpg" alt="شعار مجلس طلاب خطوة" class="logo" width="40" height="40" loading="eager" fetchpriority="high" decoding="async">
         <span>مجلس طلاب خطوة – La Trobe</span>
       </a>
 
