--- a/index.html
+++ b/index.html
@@ -7,32 +7,21 @@
   <meta name="description" content="مجلس طلاب خطوة يمثل طلاب برنامج خطوة في جامعة لا تروب – ملبورن. فعاليات، أخبار، وانضمام للمجلس.">
   <style>
     :root{--primary:#1e40af;--primary-600:#1d4ed8;--ring:#e5e7eb;--card:#f8fafc;--text:#0f172a;--muted:#6b7280}
-    *{box-sizing:border-box}
-    html,body{height:100%}
+    *{box-sizing:border-box} html,body{height:100%}
     body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;color:var(--text);background:#fff}
-
-    /* الروابط */
     a{color:inherit;text-decoration:none}
     a:visited{color:inherit}
     a:hover{text-decoration:none}
-
-    /* تركيز محسّن للوصولية */
-    :focus-visible{outline:3px solid color-mix(in oklab,var(--primary),#fff 40%);outline-offset:2px;border-radius:8px}
-
     .container{width:min(1120px,92%);margin-inline:auto}
-
-    /* Navbar */
     .navbar{position:sticky;top:0;background:#fff;border-bottom:1px solid var(--ring);z-index:40}
     .nav-inner{display:flex;justify-content:space-between;align-items:center;padding:.8rem 0}
     .brand{display:flex;align-items:center;gap:.8rem;font-weight:700}
-    .brand .logo{width:60px;height:60px;object-fit:cover;border-radius:8px}
+    .brand .logo{width:40px;height:40px;object-fit:cover;border-radius:8px}
     .nav-links{display:flex;gap:1rem}
     .nav-links a{padding:.5rem .75rem;border-radius:10px}
     .nav-links a:hover{background:var(--card)}
     .nav-cta{padding:.55rem .9rem;border-radius:12px;background:var(--primary);color:#fff;box-shadow:0 4px 18px rgba(29,78,216,.18)}
     .nav-cta:hover{background:var(--primary-600)}
-
-    /* Hero */
     header.hero{background:linear-gradient(180deg,#fff 0,#f5f7ff 100%);border-bottom:1px solid var(--ring)}
     .hero-inner{display:grid;grid-template-columns:1.2fr 1fr;gap:2rem;padding:3rem 0;align-items:center}
     .hero h1{margin:0 0 .5rem;font-size:clamp(1.6rem,2.6vw + 1rem,2.4rem)}
@@ -42,8 +31,6 @@
     .btn-primary{background:var(--primary);color:#fff;box-shadow:0 10px 28px rgba(29,78,216,.22)}
     .btn-primary:hover{background:var(--primary-600)}
     .btn-outline{background:#fff;border-color:var(--ring)}
-
-    /* Sections */
     section{padding:2rem 0}
     .section-head{display:flex;align-items:end;justify-content:space-between;gap:1rem;margin-bottom:1.2rem}
     .section-head h2{margin:0;font-size:1.4rem}
@@ -51,24 +38,17 @@
     .grid{display:grid;gap:1rem}
     .grid-3{grid-template-columns:repeat(3,1fr)}
     .grid-2{grid-template-columns:repeat(2,1fr)}
-    @media(max-width:980px){
-      .hero-inner{grid-template-columns:1fr}
-      .grid-3,.grid-2{grid-template-columns:1fr}
-    }
+    @media (max-width:980px){.hero-inner{grid-template-columns:1fr}.grid-3,.grid-2{grid-template-columns:1fr}}
     .card{background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem}
-    .chip{display:inline-block;font-size:.78rem;padding:.25rem .55rem;border-radius:999px;background:var(--card);border:1px solid var(--ring)}
-
-    /* Footer */
     footer{border-top:1px solid var(--ring);background:#fff}
     .foot{display:flex;justify-content:space-between;gap:1rem;align-items:center;padding:1.2rem 0}
   </style>
 </head>
 <body>
-  <!-- Navbar -->
   <nav class="navbar" aria-label="الشريط العلوي">
     <div class="container nav-inner">
       <a class="brand" href="/index.html" aria-label="العودة للرئيسية">
-        <img src="https://g.top4top.io/p_3516rfttb1.jpg" class="logo" alt="شعار مجلس طلاب خطوة" width="60" height="60">
+        <img src="https://g.top4top.io/p_3516rfttb1.jpg" class="logo" alt="شعار مجلس طلاب خطوة" width="40" height="40">
         <span>مجلس طلاب خطوة – La Trobe</span>
       </a>
       <div class="nav-links">
@@ -76,72 +56,32 @@
         <a href="/news.html">الأخبار</a>
         <a href="/events.html">الفعاليات</a>
         <a href="/calendar.html">التقويم</a>
+        <a href="/resources.html">الموارد</a>
         <a href="/contact.html" class="nav-cta">تواصل</a>
       </div>
     </div>
   </nav>
 
-  <!-- Hero -->
   <header class="hero">
     <div class="container hero-inner">
       <div>
         <h1>مجلس طلاب خطوة – صوت الطلاب وشريك الجامعة</h1>
-        <p>نمكّن طلاب برنامج خطوة أكاديميًا واجتماعيًا وثقافيًا، ونبني الجسر بين الطلاب وإدارة الجامعة بفعاليات نوعية وخدمات موجهة.</p>
+        <p>نمكّن طلاب برنامج خطوة أكاديميًا واجتماعيًا وثقافيًا.</p>
         <div class="cta-row">
           <a href="/contact.html" class="btn btn-primary">قدّم للعضوية</a>
           <a href="/events.html" class="btn btn-outline">شاهد أقرب الفعاليات</a>
         </div>
       </div>
-      <div class="card" aria-label="نبذة">
-        <strong>إطلاق المجلس – ملبورن</strong>
-        <p class="muted" style="margin:.3rem 0 0">تابع الأخبار والفعاليات القادمة هنا.</p>
-      </div>
+      <div class="card"><strong>إطلاق المجلس – ملبورن</strong><p class="muted">تابع الأخبار والفعاليات القادمة هنا.</p></div>
     </div>
   </header>
 
-  <main>
-    <!-- About quick -->
-    <section aria-labelledby="about-h">
-      <div class="container">
-        <div class="section-head">
-          <h2 id="about-h">من نحن</h2>
-          <a class="muted" href="/about.html">المزيد</a>
-        </div>
-        <div class="grid grid-2">
-          <article class="card"><h3>الرؤية</h3><p>دعم العملية التعليمية وخدمة المجتمع الجامعي.</p></article>
-          <article class="card"><h3>الرسالة</h3><p>تمكين الطلاب وتعزيز علاقتهم بالإدارة الجامعية.</p></article>
-          <article class="card"><h3>الأهداف</h3><p>التمثيل، القيادة، التفاعل المجتمعي، والدعوة.</p></article>
-          <article class="card"><h3>التنظيم</h3><p>رئيس ونائب وقادة فرق ومنسقو الأنشطة والإعلام.</p></article>
-        </div>
-      </div>
-    </section>
-
-    <!-- Events preview -->
-    <section aria-labelledby="events-h">
-      <div class="container">
-        <div class="section-head">
-          <h2 id="events-h">الفعاليات القادمة</h2>
-          <a class="muted" href="/events.html">تقويم الفعاليات</a>
-        </div>
-        <div class="grid grid-3">
-          <article class="card"><h3>ورشة تخصصات خطوة</h3><p class="muted">IT، الأمن السيبراني، العلوم الحيوية، الأعمال.</p></article>
-          <article class="card"><h3>بطولة البادل</h3><p class="muted">تنظيم رياضي طلابي – La Trobe Sports Centre.</p></article>
-          <article class="card"><h3>ماراثون داخل الحرم</h3><p class="muted">مسارات 1K و2.5K و10K.</p></article>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <!-- Footer -->
-  <footer aria-label="تذييل الموقع">
+  <footer>
     <div class="container foot">
       <div class="muted">© <span id="year"></span> Khotwa Student Council</div>
-      <a href="https://www.instagram.com/khotwa.sc/" target="_blank" rel="noopener noreferrer">Instagram</a>
+      <a href="https://www.instagram.com/khotwa.sc/" target="_blank">Instagram</a>
     </div>
   </footer>
-
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+  <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
 </body>
 </html>
