--- a/about.html
+++ b/about.html
@@ -10,27 +10,20 @@
     body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;color:var(--text);background:#fff}
     a{color:inherit;text-decoration:none}
     a:visited{color:inherit}
-    a:hover{text-decoration:none}
-
-    /* تحسين تركيز العناصر للوصولية */
-    :focus-visible{outline:3px solid color-mix(in oklab, var(--primary), #fff 40%);outline-offset:2px;border-radius:8px}
-
     .container{width:min(1120px,92%);margin-inline:auto}
     .navbar{position:sticky;top:0;background:#fff;border-bottom:1px solid var(--ring);z-index:40}
     .nav-inner{display:flex;justify-content:space-between;align-items:center;padding:.8rem 0}
     .brand{display:flex;align-items:center;gap:.8rem;font-weight:700}
-    /* توحيد قياس الشعار مع السمات (60×60) */
-    .brand .logo{width:60px;height:60px;object-fit:cover;border-radius:8px}
+    .brand .logo{width:40px;height:40px;object-fit:cover;border-radius:8px}
     .nav-links{display:flex;gap:1rem}
     .nav-links a{padding:.5rem .75rem;border-radius:10px}
     .nav-links a:hover{background:var(--card)}
-
     section{padding:2rem 0}
-    .muted{color:var(--muted)}
     .grid{display:grid;gap:1rem}
     .grid-2{grid-template-columns:repeat(2,1fr)}
     @media(max-width:980px){.grid-2{grid-template-columns:1fr}}
     .card{background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem}
+    .muted{color:var(--muted)}
     footer{border-top:1px solid var(--ring);padding:1rem 0;margin-top:1rem}
   </style>
 </head>
@@ -38,15 +31,15 @@
   <nav class="navbar" aria-label="الشريط العلوي">
     <div class="container nav-inner">
       <a class="brand" href="/index.html">
-        <img src="https://g.top4top.io/p_3516rfttb1.jpg" alt="شعار مجلس طلاب خطوة" class="logo" width="60" height="60">
+        <img src="https://g.top4top.io/p_3516rfttb1.jpg" alt="شعار مجلس طلاب خطوة" class="logo">
         <span>مجلس طلاب خطوة – La Trobe</span>
       </a>
-      <!-- إزالة أدوار ARIA غير الضرورية مع الحفاظ على نفس البنية -->
       <div class="nav-links">
         <a href="/about.html" aria-current="page">من نحن</a>
         <a href="/news.html">الأخبار</a>
         <a href="/events.html">الفعاليات</a>
         <a href="/calendar.html">التقويم</a>
+        <a href="/resources.html">الموارد</a>
         <a href="/contact.html">تواصل</a>
       </div>
     </div>
@@ -68,11 +61,9 @@
   <footer>
     <div class="container" style="display:flex;justify-content:space-between;gap:1rem;align-items:center">
       <div class="muted">© <span id="year"></span> Khotwa Student Council</div>
-      <a href="https://www.instagram.com/khotwa.sc/" target="_blank" rel="noopener noreferrer">Instagram</a>
+      <a href="https://www.instagram.com/khotwa.sc/" target="_blank">Instagram</a>
     </div>
   </footer>
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+  <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
 </body>
 </html>
