--- a/calendar.html
+++ b/calendar.html
@@ -5,7 +5,23 @@
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>التقويم – Khotwa</title>
   <style>
-:root{--primary:#1e40af;--ring:#e5e7eb;--card:#f8fafc;--text:#0f172a;--muted:#6b7280}*{box-sizing:border-box}body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;color:var(--text);background:#fff}a{color:inherit;text-decoration:none}a:visited{color:inherit}a:hover{text-decoration:none}:focus-visible{outline:3px solid color-mix(in oklab,var(--primary),#fff 40%);outline-offset:2px;border-radius:8px}.container{width:min(1120px,92%);margin-inline:auto}.navbar{position:sticky;top:0;background:#fff;border-bottom:1px solid var(--ring);z-index:40}.nav-inner{display:flex;justify-content:space-between;align-items:center;padding:.8rem 0}.brand{display:flex;align-items:center;gap:.8rem;font-weight:700}.brand .logo{width:40px;height:40px;object-fit:cover;border-radius:8px}.nav-links{display:flex;gap:1rem}.nav-links a{padding:.5rem .75rem;border-radius:10px}.nav-links a:hover{background:var(--card)}section{padding:2rem 0}.card{background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem}.muted{color:var(--muted)}footer{border-top:1px solid var(--ring);padding:1rem 0;margin-top:1rem}
+:root{--primary:#1e40af;--ring:#e5e7eb;--card:#f8fafc;--text:#0f172a;--muted:#6b7280}
+*{box-sizing:border-box}
+body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;color:var(--text);background:#fff}
+a{color:inherit;text-decoration:none}a:visited{color:inherit}
+:focus-visible{outline:3px solid color-mix(in oklab,var(--primary),#fff 40%);outline-offset:2px;border-radius:8px}
+.container{width:min(1120px,92%);margin-inline:auto}
+.navbar{position:sticky;top:0;background:#fff;border-bottom:1px solid var(--ring);z-index:40}
+.nav-inner{display:flex;justify-content:space-between;align-items:center;padding:.8rem 0}
+.brand{display:flex;align-items:center;gap:.8rem;font-weight:700}
+.brand .logo{width:40px;height:40px;object-fit:cover;border-radius:8px}
+.nav-links{display:flex;gap:1rem}
+.nav-links a{padding:.5rem .75rem;border-radius:10px}
+.nav-links a:hover{background:var(--card)}
+section{padding:2rem 0}
+.card{background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem}
+.muted{color:var(--muted)}
+footer{border-top:1px solid var(--ring);padding:1rem 0;margin-top:1rem}
   </style>
 </head>
 <body>
@@ -20,6 +36,7 @@
         <a href="/news.html">الأخبار</a>
         <a href="/events.html">الفعاليات</a>
         <a href="/calendar.html" aria-current="page">التقويم</a>
+        <a href="/resources.html">الموارد</a>
         <a href="/contact.html">تواصل</a>
       </div>
     </div>
@@ -45,9 +62,6 @@
       <a href="https://www.instagram.com/khotwa.sc/" target="_blank" rel="noopener noreferrer">Instagram</a>
     </div>
   </footer>
-
-  <script>
-    document.getElementById("year").textContent=new Date().getFullYear();
-  </script>
+  <script>document.getElementById("year").textContent=new Date().getFullYear();</script>
 </body>
 </html>
